# TinyInferEngine

./: CMakeLists.txt  export_model.py  tesp.py  train_minist.cpp
include/: conv2d.h  flatten.h  layer.h  linear.h  loss.h  maxpool2d.h  model.h  relu.h  sgd.h  silu.h  tensor.h
src/: conv2d.cpp  flatten.cpp  linear.cpp  loss.cpp  main.cpp  maxpool2d.cpp  model.cpp  relu.cpp  sgd.cpp  silu.cpp  tensor.cpp
tests/: test_tensor.cpp
